# cozy-ssh

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config  config.fallback  environment.yml  pyproject.toml
ctrl/: .gitkeep
keys/: .gitkeep
known_hosts/: .gitkeep
make/: clean.mk  conda.mk  dev.mk  lint.mk  mamba.mk  precommit.mk  python.mk  tests.mk
scripts/: .gitkeep  fixsshperms.py  rotate.py
ssh_config.d/: ctrl.conf  game.conf  gateway.conf  git.conf  jump.conf  keys.conf  localhost.conf  personal.conf  svc.conf  wsl.conf
ssh_config.d/opt/: helpers.conf  logging.conf  multiplex.conf
